kubernetes/applications/manifests/prometheus/prometheus-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: prometheus
  labels:
    app: prometheus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      securityContext:
        fsGroup: 65534

      containers:
        - name: prometheus
          image: prom/prometheus:v3.11.2
          args:
            - --config.file=/host-config/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --web.enable-lifecycle
            - --web.external-url=https://prometheus.example.com
            - --storage.tsdb.retention.time=15d
            - --storage.tsdb.retention.size=20GiB
            - --storage.tsdb.wal-compression
          ports:
            - name: web
              containerPort: 9090
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - name: config-host
              mountPath: /host-config
            - name: storage
              mountPath: /prometheus
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534

      volumes:
        - name: config-cm
          configMap:
            name: prometheus-config
        - name: config-host
          persistentVolumeClaim:
            claimName: prometheus-config-pvc
        - name: storage
          persistentVolumeClaim:
            claimName: prometheus-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: prometheus
spec:
  type: ClusterIP
  selector:
    app: prometheus
  ports:
    - name: web
      port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: prometheus-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prometheus.example.com
      secretName: prometheus-tls
  rules:
    - host: prometheus.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
